	  detection PIO interrupts (2013-8-6).
	* arch/arm/src/sam34/sam_hsmci.c and sama5/sam_hsmci.c:  Fix handling
	  of some masked status conditions that can cause false-alarm errors
	  (2013-8-6).
	* arch/arm/src/sama5/sam_dmac.c and sam34/sam34_dmac.c:  For SAMA5,
	  correct some bad register address and some bad assertions that caused
	  false alarms.  These latter were backported to the SAM34 DMAC driver
	  as well (2013-8-6).
	* arch/arm/src/sama5/sam_dmac.c and sam34/sam34_dmac.c: Correct
	  some parameters reversed in function call (2013-8-6).
	* arch/arm/src/sama5/sam_spi.c:  The SAMA5 SPI driver now supports
	  DMA transfers (2013-8-9).
	* arch/arm/src/sama5/sam_dmac.c:  Finally after many bugfixes (the
	  last being caching issues), the SAMA5 DMA support has been
	  verified (with SPI) (2013-8-9).
	* arch/arm/src/sama5/sam_memories.c and .h:  Central logic for
	  conversions between physical and virtual addresses (2013-8-9).
	* arch/arm/src/sama5/sam_hsmci.c and sam34/sam_hsmci.c:  Correct a
	  race condition in the SAMA5 HSCMI driver:  The tranfer done
	  interrupt was firing before the wait was started.  Fix this and
	  also backported the changes to SAM3/4 (untested).  Now HSCMI is
	  functional on the SAMA5 with DMA! (2013-8-10).
	* arch/arm/src/sam34/sam3u_periphclks.h: Correct a typo in a register
	  name (2013-8-10).
	* drivers/mmcsd/mmcsd_sdio.c:  Correction for a bad return value
	  when multiple block SDIO transfers are suppressed.  By Andrew Tridgell
	  via Lorenz Meier (2013-8-10).
	* drivers/serial/serial.c, drivers/usbdev/cdcacm.c, and
	  include/nuttx/fs/ioctl.h: Added support for FIONREAD and FIONWRITE,
	  added TERMIOS input / output processing support for UART and CDCACM
	  serial ports. Implemented by Mike Smith, Andrew Tridgell and Lorenz
	  Meier (2013-8-10).
	* drivers/usbdev/cdcacm.c:  Added FIONREAD and FIONWRITE to CDC/ACM
	  driver based on serial.c implementation. From Lorenz Meier
	  (2013-8-10).